profiling-using-exp-runner/backup_FINAL_RESULTS/fibonacci_experiment_2/run_6_repetition_0/energibridge.log
sampling interval: 200, target function: fibonacci, input size: 30
  File "<string>", line 1
    import sys; import os; import numpy as np; sys.path.append(/Users/rr/GreenLab/ProjectCode/profiling-using-exp-runner/packages); import recursive.fibonacci as module; X = 30; module.fibonacci(X); 
                                                               ^
SyntaxError: invalid syntax
Energy consumption in joules: 10.780288948059082 for 0.2335423 sec of execution.
